[tool.poetry]
name = "gantt-creator"
version = "0.1.0"
description = "A Gantt chart generator application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app.py"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.0"
pandas = "^2.2.0"
plotly = "^5.18.0"
openai = "^1.12.0"
python-dotenv = "^1.0.0"
watchdog = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 